<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zero.pokedex.createNewAccount"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">


    <Button
        android:id="@+id/button2"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:onClick="returnToLogin"
        android:text="Already have an account? Login."
        android:textStyle="bold|italic"
        app:layout_constraintHorizontal_bias="0.504"


        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/confirmPasswordText"
        android:defaultFocusHighlightEnabled="false"
        android:ems="10"
        android:focusedByDefault="false"
        android:hint="Confirm Password"
        android:drawableLeft="@android:drawable/ic_lock_lock"

        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"

        android:inputType="textPassword"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/passwordText2"
        app:layout_constraintRight_toRightOf="@+id/passwordText2"
        app:layout_constraintTop_toBottomOf="@+id/passwordText2" />

    <EditText

        android:id="@+id/emailText2"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="175dp"
        android:drawableLeft="@android:drawable/sym_action_email"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:focusedByDefault="true"
        android:hint="Email"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <EditText
        android:id="@+id/passwordText2"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="25dp"
        android:drawableLeft="@android:drawable/ic_lock_lock"
        android:ems="10"
        android:focusedByDefault="false"
        android:inputType="textPassword"
        android:hint="Password"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/emailText2"
        app:layout_constraintRight_toRightOf="@+id/emailText2"
        app:layout_constraintTop_toBottomOf="@+id/emailText2" />

    <Button
        android:id="@+id/createAccountButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="createAccount"
        android:text="Create"

        android:layout_width="180dp"
        android:layout_height="65dp"
        android:layout_marginTop="31dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordText"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

</android.support.constraint.ConstraintLayout>
